# physics-engine

./: Cargo.toml  README.md  wasm.html
.github/workflows/: push_main.yml
benches/: collisions.rs  world.rs
src/: lib.rs  main.rs
src/body/: base.rs  circle.rs  line.rs  mod.rs  rectangle.rs
src/body/dynamic_body/: base.rs  circle.rs  line.rs  mod.rs  rectangle.rs
src/body/static_body/: line.rs  mod.rs
src/bounding_volume/: mod.rs
src/rendering/: circle.rs  line.rs  mod.rs  rectangle.rs
src/simulation/: world.rs
src/simulation/collisions/: mod.rs
src/simulation/world/: generation.rs  mod.rs
src/vec2/: arithmetic.rs  mod.rs  vec2.rs
