[package]
name = "physics-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
lto = true

[[bench]]
name = "collisions"
harness = false

[[bench]]
name = "world"
harness = false
