[package]
name = "physics-engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bin]]
name = "physics-engine"
path = "src/main.rs"
bench = false

[dependencies]
macroquad = "0.4"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = true

[[bench]]
name = "collisions"
harness = false

[[bench]]
name = "world"
harness = false
